Adding EI 6.6.0 Dockerfile